@@ -1,4 +1,4 @@
-.TH SG3_UTILS "8" "February 2014" "sg3_utils\-1.38" SG3_UTILS
+.TH SG3_UTILS "8" "March 2014" "sg3_utils\-1.38" SG3_UTILS
 .SH NAME
 sg3_utils \- a package of utilities for sending SCSI commands
 .SH SYNOPSIS
