@@ -79,7 +79,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Sat Feb 15 2014 - dgilbert at interlog dot com
+* Mon Mar 03 2014 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.38
 
