@@ -2,7 +2,7 @@ sg3-utils (1.38-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 15 Feb 2014 23:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 03 Mar 2014 13:00:00 -0500
 
 sg3-utils (1.37-0.1) unstable; urgency=low
 
